--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
-    "eslint": "~3.9.1",
+    "eslint": "4.18.2",
     "mocha": "^3.1.2"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=8.10.0"
   },
   "license": "ISC"
 }
